--- a/views/about1.ejs
+++ b/views/about1.ejs
@@ -75,6 +75,9 @@
                     <a href="/about1" class="nav-item nav-link">About</a>
                     <a href="/contact1" class="nav-item nav-link">Contact</a>
                     <a href="/goToDashboard" class="nav-item nav-link">Profile</a>
+                    <a href="/prevPap" class="nav-item nav-link">Prev Papers</a>
+                    <a href="/notify" class="nav-item nav-link">Notification</a>
+
                 </div>
                 <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Logout</a>
             </div>
