--- a/views/let.ejs
+++ b/views/let.ejs
@@ -74,6 +74,8 @@
                     <a href="/home2" class="nav-item nav-link">Home</a>
                     <a href="/about1" class="nav-item nav-link">About</a>
                     <a href="/contact1" class="nav-item nav-link">Courses</a>
+                    <a href="/prevPap" class="nav-item nav-link">Prev Papers</a>
+                    <a href="/notify" class="nav-item nav-link">Notification</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
@@ -81,6 +83,7 @@
                             <a href="feature.html" class="dropdown-item">Our Features</a>
                             <a href="team.html" class="dropdown-item">Instructors</a>
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
