--- a/views/about.ejs
+++ b/views/about.ejs
@@ -74,6 +74,9 @@
                     <a href="/homee" class="nav-item nav-link ">Home</a>
                     <a href="/aboute" class="nav-item nav-link">About</a>
                     <a href="/contacte" class="nav-item nav-link">Contact</a>
+                    <a href="/prevPap" class="nav-item nav-link">Prev Papers</a>
+                    <a href="/notify" class="nav-item nav-link">Notification</a>
+
                 </div>
                 <a href="/sign-up" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login / SignUp</a>
             </div>
