--- a/views/home1.ejs
+++ b/views/home1.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Edukate - Online Education Website Template</title>
+    <title>Tech Enthusiast - Online Education Website Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -64,7 +64,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>Edukate</h1>
+                <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>Tech Enthusiast</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -74,6 +74,8 @@
                     <a href="/homee" class="nav-item nav-link active">Home</a>
                     <a href="/aboute" class="nav-item nav-link">About</a>
                     <a href="/contacte" class="nav-item nav-link">Contact</a>
+                    <a href="/prevPap" class="nav-item nav-link">Prev Papers</a>
+                    <a href="/notify" class="nav-item nav-link">Notification</a>
                 </div>
                 <a href="/sign-up" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login / SignUp</a>
             </div>
@@ -483,7 +485,7 @@
             <div class="row">
                 <div class="col-md-6 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mt-n2 text-uppercase text-white"><i class="fa fa-book-reader mr-3"></i>Edukate</h1>
+                        <h1 class="mt-n2 text-uppercase text-white"><i class="fa fa-book-reader mr-3"></i>Tech Enthusiast</h1>
                     </a>
                     <p class="m-0">Our portal provides interactive activities,group discussions,mentor sessions,previous and latest practice papers,notes and many more...</p>
                 </div>
