--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -23,7 +23,6 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="style.css" rel="stylesheet">
-    <link href="dashboard2.css" rel="stylesheet">
 </head>
 
 <body>
@@ -72,159 +71,65 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav mx-auto py-0">
-                    <a href="/home1" class="nav-item nav-link ">Home</a>
+                    <a href="/home2" class="nav-item nav-link ">Home</a>
                     <a href="/about1" class="nav-item nav-link">About</a>
                     <a href="/contact1" class="nav-item nav-link">Contact</a>
                     <a href="/goToDashboard" class="nav-item nav-link">Profile</a>
-                    <a href="/prevPap" class="nav-item nav-link">Prev Papers</a>
+                    <a href="/prevpap" class="nav-item nav-link">Previous Year</a>
                     <a href="/notify" class="nav-item nav-link">Notification</a>
                 </div>
-                <a href="/homee" class="btn btn-primary py-2 px-4 d-none d-lg-block">Logout</a>
+                <a href="/home2" class="btn btn-primary py-2 px-4 d-none d-lg-block">Logout</a>
             </div>
         </nav>
     </div>
     <!-- Navbar End -->
 
 
-    <!-- Header Start -->
-    <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
-        <div class="container text-center py-5">
-            <h1 class="text-white display-1">Get Started</h1>
-            <!-- <div class="d-inline-flex text-white mb-5">
-                <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
-                <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                <p class="m-0 text-uppercase">Contact</p>
-            </div> -->
-            <!-- <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Courses 1</a>
-                            <a class="dropdown-item" href="#">Courses 2</a>
-                            <a class="dropdown-item" href="#">Courses 3</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Keyword">
-                    
-                </div>
-            </div> -->
-        </div>
+   <!-- Header Start -->
+   <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
+    <div class="container text-center py-5">
+        <h1 class="text-white display-1">Notification</h1>
+        
     </div>
-    <!-- Header End -->
+</div>
+<!-- Header End -->
 
-
-
-<div style="text-align: center ;">
-    <a class="btn btn-primary py-3 px-5 Center" href="#"><i > </i> Teacher's Profile </a>
+<div style="text-align: center;">
+<h1>SO notification</h1>
+<p>Open a PDF file <a href="1.pdf">SO notification</a>.</p>
 </div>
 
+<div style="text-align: center;">
+    <h1>MH CET notification</h1>
+    <p>Open a PDF file <a href="2.pdf">MH CET notification</a>.</p>
+</div>
 
- <!-- ==============Checkout starts here============== -->
+<div style="text-align: center;">
+        <h1>PSO notification</h1>
+        <p>Open a PDF file <a href="3.pdf">PSO notification</a>.</p>
+</div>
 
- <!-- <section class="Checkout py-5 my-5" id="Checkout">
-    <div class="container">
-      <div class="section_title text-center mb-5">
-        
-      </div>
-      <div class="row">
-     
-        <div class="col-lg-8">
-      
-          <div class="bg_checkout_1 pb-5">
-            <div class="card-body" id="checkout">
-              <h5 class="m">Upcoming Duties</h5>
-
-              <div class="form-group">
-                <label for="form18">Name :</label>
-                <span><%= username%></span>
-              </div>
-
-              <div class="form-group">
-                <label for="form18">Email :</label>
-                <span><%= email %></span>
-              </div>
-            </div>
-          </div>
-          <% sdetails.forEach(function (sdetail) { %>
-          <div class="bg_checkout_1 pb-5">
-            <div class="card-body" id="checkout">
-              <div class="form-group">
-                <label for="form18">Phone :</label>
-                <span><%= sdetail.phone%></span>
-              </div>
-
-              <div class="form-group">
-                <label for="form14">Address Line 1 :</label>
-                <span><%= sdetail.adline1%></span>
-              </div>
-
-              <div class="form-group">
-                <label for="form15">Address Line 2 :</label>
-                <span><%= sdetail.adline2%></span>
-              </div>
-
-              <div class="form-group">
-                <label for="form17">Town / City :</label>
-                <span><%= sdetail.city%></span>
-              </div>
-
-              <div class="form-group">
-                <label for="form16">Postcode / ZIP: </label>
-                <span><%= sdetail.postcode%></span>
-              </div>
-
-              <div class="d-flex flex-wrap">
-                <div class="w-100">
-                  <label>Country :</label>
-                  <span><%= sdetail.country%></span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <% }) %>
-        </div>
-        <div class="col-lg-4 bg_checkout_1 h-25 rounded">
-         
-          <div class="mb-3">
-            <div class="pt-4">
-              <h5 class="mb-3">Order Summary</h5>
-              <ul class="list-group list-group-flush">
-                <li
-                  class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-2"
-                >
-                  <span><%= product.title%></span>
-                  <span>1</span>
-                  <span>$<%= product.price%></span>
-                </li>
-                <li
-                  class="list-group-item d-flex justify-content-between align-items-center border-top px-0 mb-3"
-                >
-                  <div>
-                    <strong>Total amount</strong>
-                    <strong>
-                      <p class="mb-0">(including GST)</p>
-                    </strong>
-                  </div>
-                  <span><strong>$<%=product.price%></strong></span>
-                </li>
-              </ul>
-              <a
-                href="/order_confirmation/<%=product._id%>"
-                class="btn btn-primary btn-block"
-                >Buy</a
-              >
-            </div>
-          </div>
-        
-        </div>
-      </div>
+<div style="text-align: center;">
+            <h1>PCS notification</h1>
+            <p>Open a PDF file <a href="4.pdf">PCS notification</a>.</p>
+</div></h1>
+    <p>Open a PDF file <a href="1.pdf">SO Previous Year</a>.</p>
     </div>
-  </section> -->
-
-  <!-- ==============Checkout ends here============== -->
-
+    
+    <div style="text-align: center;">
+        <h1>MH CET Previous year Paper</h1>
+        <p>Open a PDF file <a href="2.pdf">MH CET Previous Year</a>.</p>
+    </div>
+    
+    <div style="text-align: center;">
+            <h1>PSO Previous year Paper</h1>
+            <p>Open a PDF file <a href="3.pdf">PSO Previous Year</a>.</p>
+    </div>
+    
+    <div style="text-align: center;">
+                <h1>PCS Previous year Paper</h1>
+                <p>Open a PDF file <a href="4.pdf">PCS Previous Year</a>.</p>
+    </div>
 
    <!-- Footer Start -->
    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
